syntax = "proto3";
package test;

import "google/protobuf/any.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/status.proto";

service Test {
  rpc Test (TestRequest) returns (TestResponse);
  rpc Throw (TestRequest) returns (TestResponse);
  rpc NotImplemented (TestRequest) returns (TestResponse);
  rpc NotFound (TestRequest) returns (TestResponse);
  rpc Create (TestBufferedDataList) returns (TestBufferedDataListResponse);
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TestBufferedDataListResponse);
}

/**
* Stream test service
*/
service Stream {
  rpc BiStream (stream TestRequest) returns (stream StreamTestResponse);
  rpc ResponseStream (TestRequest) returns (stream StreamTestResponse);
  rpc RequestStream (stream TestRequest) returns (TestResponse);
}

message TestRequest {
  string value = 1;
}

message StreamTestResponse {
  string result = 1;
}

message TestResponse {
  string result = 1;
  io.restorecommerce.status.Status status = 4;
}

message TestEvent {
  string value = 1;
  int32 count = 2;
};

message TestBufferedData {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string value = 3;
  int32 count = 4;
  google.protobuf.Any data = 5;
}

message TestBufferedDataList {
  repeated TestBufferedData items = 1;
  uint32 total_count = 2;
}

message TestBufferedDataResponse {
  TestBufferedData payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message TestBufferedDataListResponse {
  repeated TestBufferedDataResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ExtendMe {
  int32 bar = 126;
}
